[serializer]Composer breaks lines at inappropriate positions bug 85184 r=akkana sr=jst a=asa patch=tmutreja@netscape.com